# fiddler

./: .gitignore  .release-please-manifest.json  .release-plz.toml  Cargo.toml  README.md  SECURITY.md  release-please-config.json  versions.json
.github/: artifacts.yml
.github/workflows/: assets.yml  check.yml  cmd.yml  noop.yml  release.yml  safety.yml  scheduled.yml  test.yml  website.yml
1.1.1/: 404.html  index.html  sitemap.xml
1.1.1/configuration/: index.html
1.1.1/getting_started/: index.html
1.1.1/search/: search_index.json
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/configuration/: index.html
1.2.0/getting_started/: index.html
1.2.0/search/: search_index.json
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/configuration/: index.html
2.0.0/getting_started/: index.html
2.0.0/search/: search_index.json
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0/configuration/: index.html
2.1.0/getting_started/: index.html
2.1.0/search/: search_index.json
2.2.0/: 404.html  index.html  sitemap.xml
2.2.0/configuration/: index.html
2.2.0/getting_started/: index.html
2.2.0/search/: search_index.json
4.0.0/: 404.html  index.html  sitemap.xml
4.0.0/configuration/: index.html
4.0.0/getting_started/: index.html
4.3.0/: 404.html  index.html  sitemap.xml
4.4.1/: 404.html  index.html  sitemap.xml
4.5.0/: 404.html  index.html  sitemap.xml
4.5.1/: 404.html  index.html  sitemap.xml
4.5.2/: 404.html  index.html  sitemap.xml
4.6.0/: 404.html  index.html  sitemap.xml
4.7.0/: 404.html  index.html  sitemap.xml
4.7.1/: 404.html  index.html  sitemap.xml
4.9.0/: 404.html  index.html  sitemap.xml
bus/: Cargo.toml
bus/src/: lib.rs
cmd/: Cargo.toml  input_test.yaml  run_tests.sh
cmd/src/: main.rs
cmd/src/test/: input.rs  mod.rs  output.rs
cmd/tests/lint_failed/: input.yaml
cmd/tests/test_failed_single/: input.yaml
cmd/tests/test_failed_too_many/: input_test.yaml
cmd/tests/test_success/: input_test.yaml
fiddler/: CHANGELOG.md  Cargo.toml  build.rs
fiddler-cli/: CHANGELOG.md  Cargo.toml
fiddler-cli/src/: bin.rs  lib.rs  main.rs
fiddler-cli/src/test/: input.rs  mod.rs  output.rs
fiddler-cli/tests/lint_failed/: input.yaml
fiddler-cli/tests/test_failed_not_enough/: input_test.yaml
fiddler-cli/tests/test_failed_single/: input_test.yaml
fiddler-cli/tests/test_success/: input.yaml
fiddler-macros/: CHANGELOG.md  Cargo.toml
fiddler-script/: CHANGELOG.md  Cargo.toml  README.md
fiddler-script/examples/: run.rs
fiddler-script/src/: ast.rs  builtins.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
fiddler-script/src/builtins/: bytes.rs  collections.rs  compression.rs  core.rs  encoding.rs  json.rs  math.rs  mod.rs  strings.rs  time.rs
fiddler-script/tests/: cli_integration.rs  integration.rs
fiddler-script/tests/scripts/: error.fs  hello.fs
fiddler/src/: lib.rs
fiddler/src/config/: mod.rs  registration.rs  validate.rs
fiddler/src/modules/: mod.rs  tls.rs
fiddler/src/modules/aws/: aws_kinesis.rs  cloudwatch.rs  mod.rs  s3.rs  sqs.rs
fiddler/src/modules/inputs/: mod.rs
fiddler/src/modules/inputs/amqp/: mod.rs
fiddler/src/modules/inputs/file/: mod.rs
fiddler/src/modules/inputs/http_server/: mod.rs
fiddler/src/modules/inputs/mqtt/: mod.rs
fiddler/src/modules/inputs/redis/: mod.rs
fiddler/src/modules/inputs/stdin/: mod.rs
fiddler/src/modules/inputs/syslog/: mod.rs
fiddler/src/modules/inputs/zeromq/: mod.rs
fiddler/src/modules/metrics/: mod.rs
fiddler/src/modules/metrics/clickhouse/: mod.rs
fiddler/src/modules/metrics/prometheus/: mod.rs
fiddler/src/modules/metrics/stdout/: mod.rs
fiddler/src/modules/outputs/: mod.rs
fiddler/src/modules/outputs/amqp/: mod.rs
fiddler/src/modules/outputs/clickhouse/: mod.rs
fiddler/src/modules/outputs/drop/: mod.rs
fiddler/src/modules/outputs/elasticsearch/: mod.rs
fiddler/src/modules/outputs/http/: mod.rs
fiddler/src/modules/outputs/mqtt/: mod.rs
fiddler/src/modules/outputs/redis/: mod.rs
fiddler/src/modules/outputs/stdout/: mod.rs
fiddler/src/modules/outputs/switch/: check.rs  mod.rs
fiddler/src/modules/outputs/zeromq/: mod.rs
fiddler/src/modules/processors/: mod.rs
fiddler/src/modules/processors/compression/: mod.rs
fiddler/src/modules/processors/decode/: mod.rs
fiddler/src/modules/processors/exception/: mod.rs
fiddler/src/modules/processors/fiddlerscript/: mod.rs
fiddler/src/modules/processors/filter/: mod.rs
fiddler/src/modules/processors/lines/: mod.rs
fiddler/src/modules/processors/noop/: mod.rs
fiddler/src/modules/processors/python/: mod.rs
fiddler/src/modules/processors/switch/: check.rs  mod.rs
fiddler/src/modules/processors/transform/: mod.rs
fiddler/src/runtime/: mod.rs
fiddler/tests/: amqp_test.rs  aws_s3_test.rs  aws_sqs_test.rs  aws_test.rs  elasticsearch_test.rs  http_test.rs  integration_test.rs  kinesis_test.rs  mqtt_test.rs  redis_test.rs
fiddler/tests/data/: input.json  input.txt
fiddler/tests/dependencies/: generator.rs  jsongenerator.rs  mock.rs  mod.rs  output.rs  processor.rs
lib/: Cargo.toml  build.rs
lib/src/: lib.rs  macros.rs
lib/src/config/: mod.rs  registration.rs  validate.rs
lib/src/env/: mod.rs
lib/src/modules/: mod.rs
lib/src/modules/inputs/: mod.rs
lib/src/modules/inputs/file/: mod.rs
lib/src/modules/inputs/stdin/: mod.rs
lib/src/modules/outputs/: mod.rs
lib/src/modules/outputs/drop/: mod.rs
lib/src/modules/outputs/elasticsearch/: mod.rs
lib/src/modules/outputs/stdout/: mod.rs
lib/src/modules/outputs/switch/: check.rs  mod.rs
lib/src/modules/processors/: mod.rs
lib/src/modules/processors/lines/: mod.rs
lib/src/modules/processors/noop/: mod.rs
lib/src/modules/processors/python/: mod.rs
lib/src/modules/processors/switch/: check.rs  mod.rs
lib/src/runtime/: mod.rs
lib/tests/: elasticsearch_test.rs  integration_test.rs
lib/tests/dependencies/: generator.rs  jsongenerator.rs  mock.rs  mod.rs  output.rs  processor.rs
macros/: Cargo.toml
macros/src/: lib.rs
website/: hooks.py  mkdocs.yml
(+587 files in other folders)
