[package]
name = "fiddler-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
surrealdb = { version = "2.0.4", features = ["kv-mem"] }
thiserror = "2.0.2"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync"] }
uuid = "1.11.0"