[package]
name = "fiddler-cli"
version = "0.1.1"
edition = "2021"
exclude = ["tests"]
license-file = "../LICENSE"
description = "Data Stream processor CLI written in rust"
readme = "../README.md"

[package.metadata]
msrv = "1.74.1"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
clap = { version = "4.5.3", features = ["derive"] }
fiddler = { version = "0.1.0", path = "../lib", features = ["all"] }
futures = "0.3.30"
inline_colorization = "0.1.6"
prettytable-rs = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
