[package]
name = "fiddler-cli"
version = "4.2.0"
edition = "2021"
exclude = ["tests"]
license-file = "../LICENSE"
description = "Data Stream processor CLI written in rust"
readme = "../README.md"

[package.metadata]
msrv = "1.74.1"

[lib]
name = "fiddler_cmd"
path = "src/lib.rs"

[[bin]]
name = "fiddler-cli"
path = "src/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
clap = { version = "4.5.3", features = ["derive"] }
fiddler = { version = "4.2.0", path = "../fiddler", features = [
    "elasticsearch",
    "aws",
    "prometheus",
] }
fiddler-macros = { version = "1.1.0", path = "../fiddler-macros" }
futures = "0.3.30"
inline_colorization = "0.1.6"
prettytable-rs = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[lints.rust]
unsafe_code = "forbid"
unused-results = "warn"
missing-docs = "warn"
redundant-imports = "warn"
unused-crate-dependencies = "warn"
unused-extern-crates = "warn"
unused-import-braces = "warn"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "warn"
