[package]
name = "fiddler"
version = "1.0.0"
edition = "2021"
license-file = "../LICENSE"
description = "Data Stream processor written in rust"
readme = "../README.md"

[package.metadata]
msrv = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
python = ["dep:pyo3"]
elasticsearch = ["dep:elasticsearch"]
aws = ["dep:aws-config", "dep:aws-sdk-sqs"]
all = ["python", "elasticsearch", "aws"]

[dependencies]
fiddler-macros = { version = "1.0.0", path = "../fiddler-macros"}
async-std = { version = "1.12.0", features = ["std"] }
async-trait = "0.1.78"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"], optional = true }
aws-sdk-sqs = { version = "1.64.0", optional = true }
elasticsearch = { version = "8.5.0-alpha.1", features = ["rustls-tls"], optional = true }
handlebars = { version = "6.3.2", features = ["no_logging"] }
jmespath = "0.3.0"
jsonschema = "0.17.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
pyo3 = { version = "0.21.1", features = ["serde", "auto-initialize"], optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4"]}
chrono = { version = "0.4.40", features = ["serde"] }
flume = { version = "0.11.1", features = ["async"] }
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[build-dependencies]
fs_extra = "1.3.0"
regex = "1.10.3"
pkg-config = "0.3.30"

[dev-dependencies]
testcontainers = { version = "0.23.3"}
testcontainers-modules = { version = "0.11.6", features = ["elastic_search", "localstack"]}
tokio-test = "0.4.4"

[lints.rust]
unsafe_code = "forbid"
missing-docs = "warn"
redundant-imports = "warn"
unused-crate-dependencies = "warn"
unused-extern-crates = "warn"
unused-import-braces = "warn"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "warn"
