[package]
name = "fiddler"
version = "0.3.1"
edition = "2021"
license-file = "../LICENSE"
description = "Data Stream processor written in rust"
readme = "../README.md"

[package.metadata]
msrv = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
python = ["dep:pyo3"]
elasticsearch = ["dep:elasticsearch"]
all = ["python", "elasticsearch"]

[dependencies]
async-std = { version = "1.12.0", features = ["std"] }
async-trait = "0.1.78"
crossbeam-channel = "0.5.12"
elasticsearch = { version = "8.5.0-alpha.1", features = ["rustls-tls"], optional = true }
fiddler-macros = { version = "0.3.1", path = "../macros" }
futures = "0.3.30"
handlebars = { version = "5.1.2", features = ["no_logging"] }
jmespath = "0.3.0"
jsonschema = "0.17.1"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
once_cell = "1.19.0"
pyo3 = { version = "0.22.1", features = ["serde", "auto-initialize"], optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"

[build-dependencies]
fs_extra = "1.3.0"
regex = "1.10.3"
pkg-config = "0.3.30"

[dev-dependencies]
testcontainers = { version = "0.15.0", features = ["tokio"] }
testcontainers-modules = { version = "0.3.7", features = ["elastic_search"]}
tokio-test = "0.4.4"

